# backend/docs/swagger/swagger.json
@@ -57,19 +57,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/ApiKeyCreateResponse"
+                            "$ref": "#/definitions/ApiKeyItem"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ApiKeyCreateErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -107,13 +107,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -138,13 +138,16 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/TodoListResponse"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/TodoItem"
+                            }
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -181,25 +184,25 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/TodoCreateResponse"
+                            "$ref": "#/definitions/TodoCreateBody"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -234,25 +237,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/TodoGetResponse"
+                            "$ref": "#/definitions/TodoItem"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -297,25 +300,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/TodoGetResponse"
+                            "$ref": "#/definitions/TodoItem"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -351,19 +354,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -402,19 +405,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/UserCreateResponse"
+                            "$ref": "#/definitions/UserItem"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/ErrorNullResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -422,17 +425,6 @@
         }
     },
     "definitions": {
-        "ApiKeyCreateErrorResponse": {
-            "type": "object",
-            "properties": {
-                "resultBody": {
-                    "$ref": "#/definitions/ApiKeyItemErr"
-                },
-                "resultHeader": {
-                    "$ref": "#/definitions/ResultHeader"
-                }
-            }
-        },
         "ApiKeyCreateRequest": {
             "type": "object",
             "required": [
@@ -450,17 +442,6 @@
                     "type": "string",
                     "format": "uuid",
                     "example": "01234567-89ab-cdef-0123-456789abcdef"
-                }
-            }
-        },
-        "ApiKeyCreateResponse": {
-            "type": "object",
-            "properties": {
-                "resultBody": {
-                    "$ref": "#/definitions/ApiKeyItem"
-                },
-                "resultHeader": {
-                    "$ref": "#/definitions/ResultHeader"
                 }
             }
         },
@@ -488,39 +469,12 @@
                 }
             }
         },
-        "ApiKeyItemErr": {
+        "ErrorResponse": {
             "type": "object",
             "properties": {
-                "created_at": {
+                "message": {
                     "type": "string",
-                    "example": ""
-                },
-                "id": {
-                    "type": "string",
-                    "example": ""
-                },
-                "key": {
-                    "type": "string",
-                    "example": ""
-                },
-                "name": {
-                    "type": "string",
-                    "example": ""
-                },
-                "user_id": {
-                    "type": "string",
-                    "example": ""
-                }
-            }
-        },
-        "ErrorNullResponse": {
-            "type": "object",
-            "properties": {
-                "resultBody": {
-                    "type": "object"
-                },
-                "resultHeader": {
-                    "$ref": "#/definitions/ResultHeader"
+                    "example": "Not Found"
                 }
             }
         },
@@ -530,15 +484,6 @@
                 "status": {
                     "type": "string",
                     "example": "ok"
-                }
-            }
-        },
-        "ResultHeader": {
-            "type": "object",
-            "properties": {
-                "resultCode": {
-                    "type": "integer",
-                    "example": 0
                 }
             }
         },
@@ -570,66 +515,30 @@
                 }
             }
         },
-        "TodoCreateResponse": {
-            "type": "object",
-            "properties": {
-                "resultBody": {
-                    "$ref": "#/definitions/TodoCreateBody"
-                },
-                "resultHeader": {
-                    "$ref": "#/definitions/ResultHeader"
-                }
-            }
-        },
-        "TodoGetResponse": {
-            "type": "object",
-            "properties": {
-                "resultBody": {
-                    "$ref": "#/definitions/TodoItem"
-                },
-                "resultHeader": {
-                    "$ref": "#/definitions/ResultHeader"
-                }
-            }
-        },
         "TodoItem": {
             "type": "object",
             "properties": {
-                "CreatedAt": {
+                "created_at": {
                     "type": "string"
                 },
-                "Description": {
+                "description": {
                     "type": "string",
                     "example": "牛乳、卵、パンを買う"
                 },
-                "ID": {
+                "id": {
                     "type": "string",
                     "example": "01234567-89ab-cdef-0123-456789abcdef"
                 },
-                "Status": {
+                "status": {
                     "type": "string",
                     "example": "pending"
                 },
-                "Title": {
+                "title": {
                     "type": "string",
                     "example": "買い物リストを作る"
                 },
-                "UpdatedAt": {
+                "updated_at": {
                     "type": "string"
-                }
-            }
-        },
-        "TodoListResponse": {
-            "type": "object",
-            "properties": {
-                "resultBody": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/TodoItem"
-                    }
-                },
-                "resultHeader": {
-                    "$ref": "#/definitions/ResultHeader"
                 }
             }
         },
@@ -674,17 +583,6 @@
                     "maxLength": 100,
                     "minLength": 1,
                     "example": "John Doe"
-                }
-            }
-        },
-        "UserCreateResponse": {
-            "type": "object",
-            "properties": {
-                "resultBody": {
-                    "$ref": "#/definitions/UserItem"
-                },
-                "resultHeader": {
-                    "$ref": "#/definitions/ResultHeader"
                 }
             }
         },
